# Embedding_Inference

./: README.md  main.py  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
src/localEmb/: config.py  embedder.py
tests/: test_config.py
