[build-system]
requires= ["setuptools>=42.0", "wheel"]
build-backend= "setuptools.build_meta"

[project]
name = "localEmb"
version = "0.0.1"
description = "Local Embedding API"
readme = "README.md"
authors = [
    {name = "Amr", email = "amrahmedelagoz@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
keywords = ["machine learning", "python", "AI", "data science", "RAG", "LLM"]
requires-python = ">=3.12"

dependencies = [
    "transformers>=4.53.0",
    "sentence-transformers>=4.1.0",
    "langchain-community>=0.3.30",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "xformers>=0.0.31"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints==2.5.0",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "flake8==7.1.1",
    "tox==4.23.2",
    "black==24.10.0",
    "pytest-mock==3.14.0",
    "pytest-watcher==0.4.3",
]

[tool.pytest.ini_options]
addopts = "--cov=localEmb"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 88  
target-version = ['py310', 'py312']  
skip-string-normalization = false  
skip-magic-trailing-comma = false  
include = '\.pyi?$'  
exclude = '''
/(
    \.eggs         
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''